# display

./: Cargo.toml  debug-cppdbg.sh  debug.gdb  openocd.cfg  run.gdb  run.sh  rustfmt.toml
.cargo/: config
scripts/: gdb_wrap.sh  openocd_start.sh  openocd_stop.sh
src/: main.rs
src/term/: font.rs  fullscreen_scroller.rs  mod.rs  vertical_scroller.rs
