[package]
name = "display"
version = "0.1.0"
authors = ["jsen- <max.enhanced@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = false # To optimize the usage of many crates, we should link with Link Time Optimization (LTO).
debug = true # Enable debugging in release mode.
overflow-checks = true

[dependencies]
stm32f1xx-hal = { version = "0.7.0", features = ["rt", "stm32f103", "medium"] }
cortex-m = { version = "0.6.7", features=["inline-asm"] }
cortex-m-rt = { version = "0.6.11" }
panic-semihosting = "0.5.6"
# display-interface-parallel-gpio = { path = "deps/display-interface/parallel-gpio" }
embedded-hal = "0.2.4"
cortex-m-semihosting = "0.3.7"
stm32f1 = { version = "0.11.0", features=["stm32f103"] }

[features]
prod=[]