[package]
name = "display"
version = "0.1.0"
authors = ["jsen- <max.enhanced@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = false # To optimize the usage of many crates, we should link with Link Time Optimization (LTO).
debug = true # Enable debugging in release mode.
overflow-checks = true

[dependencies]
stm32f1xx-hal = { version = "0.7.0", features = ["stm32f103", "medium"] }
cortex-m = { version = "0.7.2", features=["inline-asm"] }
cortex-m-rt = { version = "0.6.11" }
panic-semihosting = "0.5.6"
embedded-hal = "0.2.5"
cortex-m-semihosting = "0.3.7"
ssd1963 = { path = "deps/ssd1963", features=["stm32f1xx"] }
